--- a/website-source/small/index.njk
+++ b/website-source/small/index.njk
@@ -16,7 +16,7 @@ eleventyNavigation:
 <article class="rs-column flow">
 
   {% set postlist = collections.small %}
-
+  {% set postIcon = "note" %}
   {% include "post-list.njk" %}
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
