--- a/_back-end/_components/post-list.njk
+++ b/_back-end/_components/post-list.njk
@@ -2,16 +2,19 @@
 
 {# Need an if none #}
 
-<ol reversed class="postlist">
+<ol reversed class="rs-list rs-list-icon">
     {% for post in postlist | reverse %}
         <li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
             <a href="{{ post.url }}" class="postlist-link">
+                {% if postIcon %}
+                    <span>{% include "../../website-source/shared/images/icons/icon-"+postIcon+".svg" %}</span>
+                {% endif %}
                 {% if post.data.title %}{{ post.data.title }}
                 {% else %}
                     <code>{{ post.url }}</code>
                 {% endif %}
+                <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("dd LLLL yyyy") }}</time>
             </a>
-            <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("dd LLLL yyyy") }}</time>
         </li>
     {% endfor %}
 </ol>
