Yeyyy, got proejct cards working

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -116,7 +116,7 @@ jsFiles: []
                                     {% elif(navItem.title == "<small>") %}
                                         <p>Short notes &amp; handy snippets</p>
                                     {% elif(navItem.title == "<code>") %}
-                                        <p>Projects I've worked on</p>
+                                        <p>Work examples</p>
                                     {% endif %}
                                 </li>
                             {% endif %}
@@ -164,7 +164,7 @@ jsFiles: []
                         </ul>
                     </nav>
 
-                    <p class="rs-tac">Company number: SC683321 &nbsp;&nbsp;&hearts;&nbsp;&nbsp; Built with <a href="https://11ty.dev/" target="_blank">Eleventy v3.0.0</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; <a href="/licence/">MIT licence</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; &copy; Rising Sky Ltd. 2024</p>
+                    <p class="rs-tac">Company number: SC683321 &nbsp;&nbsp;&hearts;&nbsp;&nbsp; Built with <a href="https://11ty.dev/" target="_blank">Eleventy v3.0.0</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; <a href="/licence/">MIT licence</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; <a href="/todo/">Site to do</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; <a href="/uses/">Uses</a> &nbsp;&nbsp;&hearts;&nbsp;&nbsp; &copy; Rising Sky Ltd. 2024</p>
 
                 </div>
 
