Created a project card component and added project directory based styles to it

--- a/_back-end/_components/project-card.njk
+++ b/_back-end/_components/project-card.njk
@@ -1,5 +1,7 @@
-<div class="rs-project-panel">
-    <h3>{{project.data.title}}</h3>
-    <p>{{project.data.description}}</p>
-    <img src="{{project.url}}{{project.data.hero}}" alt="{{project.data.alt}}">
+<div class="rs-project-card">
+    <a href="{{project.url}}">
+        <img src="{{project.url}}{{project.data.hero}}" alt="{{project.data.alt}}">
+        <h3>{{project.data.title}}</h3>
+        <p>{{project.data.description}}</p>
+    </a>
 </div>
