--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -27,6 +27,9 @@ eleventyNavigation:
   </div>
 
   <div class="rs-column-wide">
+    <style>
+      {% include "../website-source/projects/css/styles.css" %}
+    </style>
     <div class="rs-panel rs-panel-projects">
       <h2>Featured projects</h2>
       <div class="rs-panel-projects-container">
