Hover project panel first version done

--- a/_back-end/_components/project-card.njk
+++ b/_back-end/_components/project-card.njk
@@ -2,6 +2,6 @@
     <a href="{{project.url}}">
         <img src="{{project.url}}{{project.data.hero}}" alt="{{project.data.alt}}">
         <h3>{{project.data.title}}</h3>
-        <p>{{project.data.description}}</p>
+        <p class="rs-project-card-description">{{project.data.description}}</p>
     </a>
 </div>
