--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -20,7 +20,7 @@ eleventyNavigation:
 
     {# Note, introduce page of horrow on hover later #}
 
-    <p>Navigating the Web can be a horrible experience at times. Rising Sky makes <strong>simple</strong>, <strong>satisfying</strong> and <strong>sustainable</strong> Web content. We have been trusted by clients <a href="https://www.eurocontrol.int/" target="_blank">big</a> and <a href="/projects/mid-argyll-rfc/">small</a> since 2001.</p>
+    <p>Navigating the Web can be a horrible experience at times. Rising Sky makes <strong>simple</strong>, <strong>satisfying</strong> and <strong>sustainable</strong> Web content. We have been trusted by clients since 2001.</p>
 
     <p>
       <strong>Patrick Grey</strong> is our lead developer, please <a href="#contact">get in touch</a> with him to discuss your project.</p>
