Updated intro text

--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -16,11 +16,11 @@ eleventyNavigation:
 <article>
 
   <div class="rs-column flow">
-    <p>Do you need a <strong>website</strong>, an <strong>e-learning course</strong> or an improved <strong>user interface</strong> for your web app? Rising Sky can help. We also offer digital <strong>consultation</strong> and customisation of the <a href="https://www.im-c.com/learning-suite/" target="_blank">IMC Learning Management System</a>.</p>
+    <p>Do you need a <strong>website</strong>, an <strong>e-learning course</strong> or an improved <strong>user interface</strong> for your web app? Rising Sky can help. We also offer  <strong>consultation</strong> if you want to update legacy websites, adopt new technology, or customise the <a href="https://www.im-c.com/learning-suite/" target="_blank">IMC Learning Management System</a>.</p>
 
     {# Note, introduce page of horrow on hover later #}
 
-    <p>Navigating the Web can be a horrible experience at times. Rising Sky makes <strong>simple</strong>, <strong>satisfying</strong> and <strong>sustainable</strong> Web content. We have been trusted by clients since 2001.</p>
+    <p>Navigating the Web can be a horrible experience at times. Rising Sky make <strong>simple</strong>, <strong>satisfying</strong> and <strong>sustainable</strong> Websites. We have been trusted by clients since 2001.</p>
 
     <p>
       <strong>Patrick Grey</strong> is our lead developer, please <a href="#contact">get in touch</a> with him to discuss your project.</p>
