--- a/website-source/projects/2024-01-01-alc-panel-this-week/index.njk
+++ b/website-source/projects/2024-01-01-alc-panel-this-week/index.njk
@@ -1,12 +1,13 @@
 ---
 title: Aviation learning this week
-description: A web panel showing current learning statistics for the Aviation Learning Centre, inlcuding a 3D spinning globe.
+description: Dashboard panel with dynamic learning statistics featuring a 3D spinning globe.
 published: 2023-11-20
 updated: 2023-11-22
 tech: ['webGL', 'HTML', 'CSS', 'JavaScript']
 hero: 'images/hero.jpg'
 alt: 'A graphic panel on a webpage showing current learning data for the Aviation Learning Centre with a 3D spinning globe showing the number of participants from each country by flag.'
-css: [css/styles.css]
-tags: ['UI', 'web development']
+css: [css/projects.css]
+tags: ['UI', 'WebGL', 'Data']
+artDirection: 'center right'
 ---
 <p>Hello</p>
