--- a/website-source/shared/css/brand.css
+++ b/website-source/shared/css/brand.css
@@ -47,6 +47,7 @@
 
     --rs-colour-ec-light-blue: #2172ba;
     --rs-colour-ec-dark-blue: #003366;
+    --rs-colour-ec-dark-blue-value: 0, 51, 102;
 
     --rs-colour-page-bg: white;
     --rs-colour-logo-stroke: var(--rs-colour-ec-dark-blue);
@@ -69,6 +70,7 @@
     --rs-colour-light-blue-values: 180 100% 46%;
     --rs-colour-mid-grey: #999999;
     --rs-colour-dark-grey: #666666;
+    --rs-colour-light-grey: whitesmoke;
 
     --rs-colour-pink: hsl(var(--rs-colour-pink-values));
     --rs-colour-red: hsl(var(--rs-colour-red-values));
@@ -139,6 +141,16 @@ body {
 
 *:focus-visible {
     outline: 2px dashed var(--rs-colour-ec-dark-blue);
+    outline-offset: 2px;
+}
+
+footer *::selection {
+    background-color: var(--rs-colour-yellow);
+    color: var(--rs-colour-ec-dark-blue);
+}
+
+footer *:focus-visible {
+    outline: 2px dashed var(--rs-colour-yellow);
 }
 
 
@@ -461,14 +473,15 @@ nav>ul>li>a:focus+p {
 nav>ul.rs-nav-sub {
     --threshold: 45rem;
     gap: var(--space-3xs);
-    margin: var(--space-3xl) auto var(--space-3xl) auto;
+    margin: var(--space-3xl) auto var(--space-m) auto;
     max-width: var(--rs-width-max-column);
 }
 
 nav>ul.rs-nav-sub>li>a {
     width: 100%;
     text-align: center;
-    border-block-end-color: var(--rs-colour-light-blue);
+    /* border-block-end-color: var(--rs-colour-light-blue); */
+    border-block-end: 0;
     color: var(--rs-colour-light-blue);
     background-color: rgba(255, 255, 255, 0.1);
     line-height: 1;
@@ -631,6 +644,48 @@ a[href="#bio"]:hover>span>img {
 
     a[href="#bio"]:hover>span>img {
         transform: rotate(-45deg) translate(30%, 10%);
+    }
+}
+
+/*
+########     ###    ##    ## ######## ##        ######
+##     ##   ## ##   ###   ## ##       ##       ##    ##
+##     ##  ##   ##  ####  ## ##       ##       ##
+########  ##     ## ## ## ## ######   ##        ######
+##        ######### ##  #### ##       ##             ##
+##        ##     ## ##   ### ##       ##       ##    ##
+##        ##     ## ##    ## ######## ########  ######
+*/
+
+.rs-panel {
+    position: relative;
+    background-color: var(--rs-colour-light-grey);
+    padding: var(--space-s);
+    width: 100%;
+    border-block-end: 10px solid hsl(var(--rs-highlight-current-values) / 1);
+    clip-path: polygon(var(--space-xs) 0, 100% 0, 100% calc(100% - var(--space-xs)), calc(100% - var(--space-xs)) 100%, 0 100%, 0 var(--space-xs));
+}
+
+.rs-panel>h2 {
+    margin-block-start: 0;
+    text-align: center;
+}
+
+.rs-panel>.rs-panel-icon {
+    position: absolute;
+    color: hsl(var(--rs-highlight-current-values) / 1);
+    top: var(--space-3xs);
+    right: var(--space-3xs);
+
+    >svg {
+        width: var(--font-size-2);
+        height: var(--font-size-2);
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .rs-panel {
+        flex: 1 1 0px;
     }
 }
 
