--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -1,7 +1,7 @@
 ---
 title: Rising Sky
 layout: base
-cssFiles: ["/index.css"]
+cssFiles: ["/index.css", "/projects/css/projects.css"]
 eleventyNavigation:
   key: <meta>
   order: 1
@@ -9,27 +9,24 @@ eleventyNavigation:
 
 <div class="rs-column-wide">
   <h1>
-    <em>Human-friendly</em> web things</h1>
+    <em>Human&#8209;friendly</em> web things</h1>
   {# <p>Websites Web Apps E-learning</p>     #}
 </div>
 
 <article>
 
   <div class="rs-column flow">
-    <p>Do you need a <strong>website</strong>, an <strong>e-learning course</strong> or an improved <strong>user interface</strong> for your web app? Rising Sky can help. We also offer  <strong>consultation</strong> if you want to update legacy websites, adopt new technology, or customise the <a href="https://www.im-c.com/learning-suite/" target="_blank">IMC Learning Management System</a>.</p>
+    <p>Do you need a <strong>website</strong>, an <strong>e&#8209;learning course</strong> or a modernised <strong>user interface</strong> for your web app? Rising Sky can help. We also provide  <strong>advice</strong> on updating legacy websites, adopting new technology, and customising the <a href="https://www.im-c.com/learning-suite/" target="_blank">IMC Learning Management System</a>.</p>
 
     {# Note, introduce page of horrow on hover later #}
 
-    <p>Navigating the Web can be a horrible experience at times. Rising Sky make <strong>simple</strong>, <strong>satisfying</strong> and <strong>sustainable</strong> Websites. We have been trusted by clients since 2001.</p>
+    <p>Navigating the Web can be a horrible experience at times. Rising Sky make <strong>human&#8209;friendly</strong>, <strong>effective</strong> and <strong>sustainable</strong> websites, which is why clients have been trusting us with their projects since 2001.</p>
 
     <p>
       <strong>Patrick Grey</strong> is our lead developer, please <a href="#contact">get in touch</a> with him to discuss your project.</p>
   </div>
 
   <div class="rs-column-wide">
-    <style>
-      {% include "../website-source/projects/css/styles.css" %}
-    </style>
     <div class="rs-panel rs-panel-projects">
       <h2>Featured projects</h2>
       <div class="rs-panel-projects-container">
@@ -37,6 +34,7 @@ eleventyNavigation:
           {% include "project-card.njk" %}
         {% endfor %}
       </div>
+      <div class="rs-panel-icon">{% include "../website-source/shared/images/icons/icon-code.svg" %}</div>
     </div>
   </div>
 
@@ -48,6 +46,7 @@ eleventyNavigation:
       {% set postIcon = "article" %}
       {% set postLimit = 10 %}
       {% include "post-list.njk" %}
+      <div class="rs-panel-icon">{% include "../website-source/shared/images/icons/icon-article.svg" %}</div>
     </div>
 
     <div class="rs-panel">
@@ -56,6 +55,7 @@ eleventyNavigation:
       {% set postIcon = "note" %}
       {% set postLimit = 10 %}
       {% include "post-list.njk" %}
+      <div class="rs-panel-icon">{% include "../website-source/shared/images/icons/icon-note.svg" %}</div>
     </div>
 
   </div>
