Fixed project to code references

--- a/website-source/code/2024-01-01-alc-panel-this-week/index.njk
+++ b/website-source/code/2024-01-01-alc-panel-this-week/index.njk
@@ -6,7 +6,7 @@ updated: 2023-11-22
 tech: ['webGL', 'HTML', 'CSS', 'JavaScript']
 hero: 'images/hero.jpg'
 alt: 'A graphic panel on a webpage showing current learning data for the Aviation Learning Centre with a 3D spinning globe showing the number of participants from each country by flag.'
-css: [css/projects.css]
+css: [css/code.css]
 tags: ['UI', 'WebGL', 'Data']
 artDirection: 'center right'
 ---
