--- a/website-source/code/index.njk
+++ b/website-source/code/index.njk
@@ -1,6 +1,5 @@
 ---
-title: Projects
-permalink: code/
+title: Code projects
 override:tags: []
 override:layout: base
 eleventyNavigation:
@@ -15,7 +14,7 @@ eleventyNavigation:
 
 <article class="rs-column flow">
 
-  {% set postlist = collections.projects %}
+  {% set postlist = collections.code %}
 
   {% include "post-list.njk" %}
 
