--- a/website-source/code/2024-01-01-alc-panel-this-week/index.njk
+++ b/website-source/code/2024-01-01-alc-panel-this-week/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Aviation learning this week
+title: "Aviation <em>learning</em> this week"
 description: Dashboard panel with dynamic learning statistics featuring a 3D spinning globe.
 published: 2023-11-20
 updated: 2023-11-22
@@ -10,4 +10,8 @@ css: [css/code.css]
 tags: ['UI', 'WebGL', 'Data']
 artDirection: 'center right'
 ---
-<p>Hello</p>
+<article>
+    <div class="rs-column flow">
+        <p>Hello</p>
+    </div>
+</article>
