--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -17,7 +17,7 @@ jsFiles: []
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{ title or metadata.title }}</title>
+        <title>{{ title | striptags(false) }}</title>
         <meta name="description" content="{{ description or metadata.description }}">
         <meta name="generator" content="{{ eleventy.generator }}">
 
