--- a/website-source/code/index.njk
+++ b/website-source/code/index.njk
@@ -9,7 +9,7 @@ eleventyNavigation:
 
 <div class="rs-column-header-wide">
   <h1>
-    <em>Project</em> page</h1>
+    <em>Code projects</em> page</h1>
 </div>
 
 <article class="rs-column flow">
