--- a/website-source/code/2024-01-01-alc-panel-this-week/index.njk
+++ b/website-source/code/2024-01-01-alc-panel-this-week/index.njk
@@ -1,5 +1,5 @@
 ---
-title: "Aviation <em>learning</em> this week"
+title: "Aviation learning <em>this week</em>"
 description: Dashboard panel with dynamic learning statistics featuring a 3D spinning globe.
 published: 2023-11-20
 updated: 2023-11-22
