--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -1,6 +1,7 @@
 ---
 title: Articles
 permalink: article/
+layout: base
 eleventyNavigation:
   key: <article>
   order: 3
@@ -8,7 +9,8 @@ eleventyNavigation:
 
 <div class="rs-column-header-wide">
   <h1>
-    <em>Article</em> pages</h1>
+    <em>Articles</em>
+  </h1>
 </div>
 
 <article class="rs-column flow">
