--- a/website-source/code/index.njk
+++ b/website-source/code/index.njk
@@ -2,6 +2,7 @@
 title: Code projects
 override:tags: []
 override:layout: base
+cssFiles: ["./css/code.css"]
 eleventyNavigation:
   key: <code>
   order: 2
@@ -9,13 +10,23 @@ eleventyNavigation:
 
 <div class="rs-column-header-wide">
   <h1>
-    <em>Code projects</em> page</h1>
+    <em>Projects</em>
+  </h1>
 </div>
 
-<article class="rs-column flow">
+<article class="rs-column-wide flow">
 
-  {% set postlist = collections.code %}
+  <div class="rs-column">
+    <p>Find below examples of projects that Rising Sky has been involved in. They demonstrate the wide set of development skills we could offer you.</p>
+    <p>Note: should give some indication of the general project type categories</p>
+  </div>
 
-  {% include "post-list.njk" %}
-
+  <div class="rs-panel rs-panel-projects">
+    <div class="rs-panel-projects-container">
+      {% for code in collections.code | reverse %}
+        {% include "code-card.njk" %}
+      {% endfor %}
+    </div>
+    <div class="rs-panel-icon">{% include "../shared/images/icons/icon-code.svg" %}</div>
+  </div>
 </article>
